Replace direct usages of createBaseModel